@@ -12,7 +12,7 @@ Positron::Handler::ArrayRef - a DOM interface for ArrayRefs
   my $template = [
     'a',
     { href => "/"},
-    [ 'b', undef, "Now: " ],
+    [ 'b', "Now: " ],
     "next page",
   ];
   my $data   = { foo => 'bar', baz => [ 1, 2, 3 ] };
@@ -28,7 +28,7 @@ documentation of the methods is therefore extra deep.
 =head2 ArrayRef representation
 
 In ArrayRef representation, a DOM element is simply a reference to an array
-with at least two children: the node tag, a hash (reference) with attributes,
+with at least one element: the node tag, an optional hash (reference) with attributes,
 and any children the node might have. Pure text is represented by simple strings.
 Comments, processing instructions or similar have no intrinsic representation;
 at best they can be represented as simple nodes with special tag names.
@@ -38,9 +38,9 @@ An example:
   [
     'a',
     { href => "/"},
-    [ 'b', undef, "Now: " ],
+    [ 'b', "Now: " ],
     "next page >>",
-    ['br', undef],
+    ['br'],
   ];
 
 This corresponds to the HTML representation of:
@@ -49,8 +49,9 @@ This corresponds to the HTML representation of:
 
 Note the plain C<<< >> >>> in the ArrayRef representation: text does B<not>
 need to be encoded in HTML entities.
-Note also that I<something> needs to occupy the attribute slot, even if it's
-C<undef> (which corresponds to an empty hash reference).
+Note also that the attributes, if present, need to occupy the second slot
+of the array reference. A missing attribute hash reference corresponds to
+no attributes.
 
 =cut
 
@@ -62,7 +63,7 @@ use Carp;
 
 # Format:
 # [ 'a', { href => "/"},
-#   [ 'b', undef, [ "Now: " ] ],
+#   [ 'b', [ "Now: " ] ],
 #   "next page",
 # ]
 
@@ -75,8 +76,8 @@ use Carp;
   $handler = Positron::Handler::ArrayRef->new();
 
 The constructor has no parameters; this is a very basic class.
-Normally, the template engine will call the constructor the correct
-handler for whatever it is handed as template.
+Normally, the template engine will automatically call the constructor
+of the correct handler for whatever it is handed as template.
 
 =cut 
 
@@ -112,7 +113,9 @@ sub shallow_clone {
     if (ref($node)) {
         # should not clone children
         my ($tag, $attributes) = @$node; 
-        $attributes //= {};
+        if (ref($attributes) ne 'HASH') {
+            $attributes = {};
+        }
         my $new_node = [ $tag, { %$attributes } ];
         return $new_node;
     } else {
@@ -135,7 +138,9 @@ sub get_attribute {
     my ($self, $node, $attr) = @_;
     return unless ref($node);
     my ($tag, $attributes, @children) = @$node; 
-    $attributes //= {};
+    if (ref($attributes) ne 'HASH') {
+        $attributes = {};
+    }
     return $attributes->{$attr};
 }
 
@@ -156,9 +161,9 @@ sub set_attribute {
     my ($self, $node, $attr, $value) = @_;
     return unless ref($node);
     my ($tag, $attributes, @children) = @$node; 
-    if (!$attributes) {
+    if (ref($attributes) ne 'HASH') {
         $attributes = {};
-        $node->[1] = $attributes;
+        splice @$node, 1, 0, $attributes;
     }
     if (defined($value)) {
         return $attributes->{$attr} = $value;
@@ -173,7 +178,7 @@ sub set_attribute {
   @attr_names = $handler->list_attributes($node);
 
 Lists the I<names> of all (defined) attributes on the node.
-Text nodes have no attributes and generate and empty list.
+Text nodes have no attributes and generate an empty list.
 
 =cut
 
@@ -181,7 +186,7 @@ sub list_attributes {
     my ($self, $node) = @_;
     return unless ref($node);
     my ($tag, $attributes, @children) = @$node; 
-    $attributes //= {};
+    return unless ref($attributes) eq 'HASH';
     return sort keys %$attributes;
 }
 
@@ -215,7 +220,12 @@ have none.
 sub list_contents {
     my ($self, $node) = @_;
     return unless ref($node);
+    return unless (@$node > 1); # neither attributes nor content
     my ($tag, $attributes, @children) = @$node; 
+    if (ref($attributes) ne 'HASH') {
+        # not an attribute hash after all?
+        unshift @children, $attributes;
+    }
     return @children;
 }
 
